; ModuleID = '/home/carl/AnghaBench/libevent/extr_bufferevent_sock.c_bufferevent_socket_connect_hostname.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_bufferevent_sock.c_bufferevent_socket_connect_hostname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferevent = type { i32 }
%struct.evdns_base = type { i32 }
%struct.evutil_addrinfo = type { i32, i32, i32 }

@IPPROTO_TCP = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bufferevent_socket_connect_hostname(%struct.bufferevent* %0, %struct.evdns_base* %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca %struct.bufferevent*, align 8
  %7 = alloca %struct.evdns_base*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.evutil_addrinfo, align 4
  store %struct.bufferevent* %0, %struct.bufferevent** %6, align 8
  store %struct.evdns_base* %1, %struct.evdns_base** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = call i32 @memset(%struct.evutil_addrinfo* %11, i32 0, i32 12)
  %13 = load i32, i32* %8, align 4
  %14 = getelementptr inbounds %struct.evutil_addrinfo, %struct.evutil_addrinfo* %11, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  %15 = load i32, i32* @IPPROTO_TCP, align 4
  %16 = getelementptr inbounds %struct.evutil_addrinfo, %struct.evutil_addrinfo* %11, i32 0, i32 2
  store i32 %15, i32* %16, align 4
  %17 = load i32, i32* @SOCK_STREAM, align 4
  %18 = getelementptr inbounds %struct.evutil_addrinfo, %struct.evutil_addrinfo* %11, i32 0, i32 1
  store i32 %17, i32* %18, align 4
  %19 = load %struct.bufferevent*, %struct.bufferevent** %6, align 8
  %20 = load %struct.evdns_base*, %struct.evdns_base** %7, align 8
  %21 = load i8*, i8** %9, align 8
  %22 = load i32, i32* %10, align 4
  %23 = call i32 @bufferevent_socket_connect_hostname_hints(%struct.bufferevent* %19, %struct.evdns_base* %20, %struct.evutil_addrinfo* %11, i8* %21, i32 %22)
  ret i32 %23
}

declare dso_local i32 @memset(%struct.evutil_addrinfo*, i32, i32) #1

declare dso_local i32 @bufferevent_socket_connect_hostname_hints(%struct.bufferevent*, %struct.evdns_base*, %struct.evutil_addrinfo*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
